--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 # Compiled
 *.elc
-
-# Packaging
-.cask
-
 # Backup files
 *~
-
-# Undo-tree save-files
-*.~undo-tree
+#old reference files
+old-*.el
